--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "sass": "^1.54.5",
     "swiper": "^8.3.2",
     "vinyl-ftp": "^0.6.1",
-    "webp-converter": "^2.2.3",
+    "webp-converter": "2.2.3",
     "webpack": "^5.58.1",
     "webpack-stream": "^7.0.0"
   }
